--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -30,7 +30,7 @@
     "3. query & inspect files by metadata individually ([here](/scrna2))\n",
     "4. load the dataset into memory and save analytical results as plots ([here](/scrna3))\n",
     "5. iterate over the dataset, train a model, store a derived representation ([here](/scrna4))\n",
-    "6. discuss converting a number of files to a single TileDB SOMA store of the same data (to come)\n",
+    "6. discuss converting a number of files to a single TileDB SOMA store of the same data ([here](/scrna5))\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -40,6 +40,7 @@
     "scrna2\n",
     "scrna3\n",
     "scrna4\n",
+    "scrna5\n",
     "```"
    ]
   },
