--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -41,6 +41,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe511a4d",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f232d65e",
@@ -157,10 +165,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a7e2e85",
+   "id": "07ba43a7",
    "metadata": {},
    "source": [
-    "### Train on the first file"
+    "## Train the model"
    ]
   },
   {
@@ -187,7 +195,7 @@
    "id": "1bfef8a2",
    "metadata": {},
    "source": [
-    "Train the model on this batch of data:"
+    "Train the model on this first file:"
    ]
   },
   {
@@ -212,7 +220,7 @@
    "id": "d42318ec",
    "metadata": {},
    "source": [
-    "Load the file and keep training the model:"
+    "Load the second file and resume training the model:"
    ]
   },
   {
@@ -309,6 +317,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5794f1cc",
+   "metadata": {},
+   "source": [
+    "Let us look at the data flow:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0364f1ea",
@@ -316,6 +332,24 @@
    "outputs": [],
    "source": [
     "dataset_v2_latent.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8688bf0d",
+   "metadata": {},
+   "source": [
+    "Compare this with the model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e01f713",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights.view_flow()"
    ]
   },
   {
@@ -333,16 +367,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2_latent.labels.add_from(dataset_v2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e4a3da6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dataset_v2_latent.labels.add_from(dataset_v2)\n",
+    "\n",
     "dataset_v2_latent.describe()"
    ]
   },
