--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -183,15 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_itm2a.pdf\", description=\"My result on ITM2A\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "file = ln.File(\"./figures/pca_itm2a.pdf\", description=\"My result on ITM2A\")\n",
     "file.save()"
    ]
   },
@@ -202,6 +194,17 @@
    "outputs": [],
    "source": [
     "file.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook via the command line via:\n",
+    "\n",
+    "```\n",
+    "lamin save <notebook_path>\n",
+    "```"
    ]
   }
  ],
