--- a/docs/scrna1.ipynb
+++ b/docs/scrna1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Append a new batch of data"
+    "# Append a new batch of data ![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)"
    ]
   },
   {
