--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query individual files"
+    "# Query individual files ![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)"
    ]
   },
   {
