--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze a dataset in memory"
+    "# Analyze a dataset in memory ![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)"
    ]
   },
   {
