--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -5,7 +5,7 @@
    "id": "6a0da8a5",
    "metadata": {},
    "source": [
-    "# Iteratively train an ML model model on a dataset"
+    "# Iteratively train an ML model on a dataset ![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)"
    ]
   },
   {
