--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert a number of files to a single array store"
+    "# Convert a number of files to a single array store ![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)"
    ]
   },
   {
