--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# scRNA-seq"
+    "# scRNA-seq ![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey)"
    ]
   },
   {
@@ -25,12 +25,12 @@
     "\n",
     "Specifically, you will:\n",
     "\n",
-    "1. read a single `.h5ad` file as an `AnnData` and seed a growing dataset with it\n",
-    "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([here](/scrna1))\n",
-    "3. query & inspect files by metadata individually ([here](/scrna2))\n",
-    "4. load the dataset into memory and save analytical results as plots ([here](/scrna3))\n",
-    "5. iterate over the dataset, train a model, store a derived representation ([here](/scrna4))\n",
-    "6. discuss converting a number of files to a single TileDB SOMA store of the same data ([here](/scrna5))\n",
+    "1. read a single `.h5ad` file as an `AnnData` and seed a growing dataset with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), currently page)\n",
+    "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna1))\n",
+    "3. query & inspect files by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna2))\n",
+    "4. load the dataset into memory and save analytical results as plots ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna3))\n",
+    "5. iterate over the dataset, train a model, store a derived representation ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna4))\n",
+    "6. discuss converting a number of files to a single TileDB SOMA store of the same data ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna5))\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
