--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3a92e598",
+   "metadata": {},
+   "source": [
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna4.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a0da8a5",
    "metadata": {},
    "source": [
