--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna3.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Analyze a dataset in memory ![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)"
    ]
   },
