--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna.ipynb)\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/laminlabs/lamin-usecases/main?labpath=lamin-usecases%2Fdocs%2Fscrna.ipynb)"
    ]
@@ -12,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# scRNA-seq ![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey)"
+    "# scRNA-seq"
    ]
   },
   {
