--- a/docs/scrna1.ipynb
+++ b/docs/scrna1.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna1.ipynb)"
    ]
   },
@@ -11,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Append a new batch of data ![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)"
+    "# Append a new batch of data"
    ]
   },
   {
