--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -5,6 +5,7 @@
    "id": "3a92e598",
    "metadata": {},
    "source": [
+    "![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna4.ipynb)"
    ]
   },
@@ -13,7 +14,7 @@
    "id": "6a0da8a5",
    "metadata": {},
    "source": [
-    "# Iteratively train an ML model on a dataset ![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)"
+    "# Iteratively train an ML model on a dataset"
    ]
   },
   {
