--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna2.ipynb)"
    ]
   },
@@ -11,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query individual files ![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)"
+    "# Query individual files"
    ]
   },
   {
