--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna3.ipynb)"
    ]
   },
@@ -11,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze a dataset in memory ![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)"
+    "# Analyze a dataset in memory"
    ]
   },
   {
