--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -4,24 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna3.ipynb)"
+    "![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)\n",
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna2.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze a dataset in memory"
+    "# Query individual files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we'll analyze the growing dataset by loading it into memory.\n",
+    "Here, we'll query individual files and inspect their metadata.\n",
     "\n",
-    "This is only possible if it's not too large. If you deal with particularly large data, please read the guide on iterating over datta batches (to come)."
+    "This guide can be skipped if you are only interested in how to leverage the overall dataset."
    ]
   },
   {
@@ -45,43 +45,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ln.Dataset.filter().df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.files.df()"
+    "## Access ![](https://img.shields.io/badge/Access-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the dataset doesn't consist of too many files, we can now load it into memory.\n",
-    "\n",
-    "Under-the-hood, the `AnnData` objects are concatenated during loading.\n",
-    "\n",
-    "The amount of time this takes depends on a variety of factors.\n",
-    "\n",
-    "If it occurs often, one might consider storing a concatenated version of the dataset, rather than the individual pieces."
+    "## Query files by provenance metadata"
    ]
   },
   {
@@ -90,14 +64,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = dataset.load()"
+    "users = ln.User.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Transform.filter(created_by=users.testuser1).search(\"scrna\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = ln.Transform.filter(id=\"Nv48yAceNSh8z8\").one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.File.filter(transform=transform).df()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The default is an outer join during concatenation as in pandas:"
+    "### Query files based on biological metadata "
    ]
   },
   {
@@ -106,14 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `AnnData` has the reference to the individual files in the `.obs` annotations:"
+    "assays = lb.ExperimentalFactor.lookup()\n",
+    "species = lb.Species.lookup()\n",
+    "cell_types = lb.CellType.lookup()"
    ]
   },
   {
@@ -122,66 +118,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs.file_id.cat.categories"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can easily obtain ensemble IDs for gene symbols using the look up object:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genes = lb.Gene.lookup(field=\"symbol\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genes.itm2a.ensembl_gene_id"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us create a plot:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scanpy as sc\n",
-    "\n",
-    "sc.pp.pca(adata, n_comps=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.pl.pca(\n",
-    "    adata,\n",
-    "    color=genes.itm2a.ensembl_gene_id,\n",
-    "    title=(\n",
-    "        f\"{genes.itm2a.symbol} / {genes.itm2a.ensembl_gene_id} /\"\n",
-    "        f\" {genes.itm2a.description}\"\n",
-    "    ),\n",
-    "    save=\"_itm2a\",\n",
+    "query = ln.File.filter(\n",
+    "    experimental_factors=assays.single_cell_rna_sequencing,\n",
+    "    species=species.human,\n",
+    "    cell_types=cell_types.gamma_delta_t_cell,\n",
     ")"
    ]
   },
@@ -191,8 +131,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_itm2a.pdf\", description=\"My result on ITM2A\")\n",
-    "file.save()"
+    "query.df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transform ![](https://img.shields.io/badge/Transform-10b981) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare gene sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get file objects:"
    ]
   },
   {
@@ -201,24 +161,177 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_flow()"
+    "query = ln.File.filter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1, file2 = query.list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2.view_flow()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook via the command line via:\n",
+    "Load files into memory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1_adata = file1.load()\n",
+    "file2_adata = file2.load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we compute shared genes without loading files:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1_genes = file1.features[\"var\"]\n",
+    "file2_genes = file2.features[\"var\"]\n",
     "\n",
-    "```\n",
-    "lamin save <notebook_path>\n",
-    "```"
+    "shared_genes = file1_genes & file2_genes\n",
+    "len(shared_genes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shared_genes.list(\"symbol\")[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare cell types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1_celltypes = file1.cell_types.all()\n",
+    "file2_celltypes = file2.cell_types.all()\n",
+    "\n",
+    "shared_celltypes = file1_celltypes & file2_celltypes\n",
+    "shared_celltypes_names = shared_celltypes.list(\"name\")\n",
+    "shared_celltypes_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now subset the two datasets by shared cell types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1_adata_subset = file1_adata[\n",
+    "    file1_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
+    "]\n",
+    "\n",
+    "file2_adata_subset = file2_adata[\n",
+    "    file2_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concatenate subsetted datasets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_concat = ad.concat(\n",
+    "    [file1_adata_subset, file2_adata_subset],\n",
+    "    label=\"file\",\n",
+    "    keys=[file1.description, file2.description],\n",
+    ")\n",
+    "adata_concat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_concat.obs.value_counts()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -235,16 +348,16 @@
    "version": "3.9.16"
   },
   "nbproject": {
-   "id": "mfWKm8OtAzp8",
+   "id": "agayZTonayqA",
    "parent": null,
    "pypackage": null,
-   "time_init": "2023-09-29T12:59:55.490264+00:00",
-   "user_handle": null,
-   "user_id": null,
-   "user_name": null,
+   "time_init": "2023-07-24T13:17:25.215702+00:00",
+   "user_handle": "sunnyosun",
+   "user_id": "kmvZDIX9",
+   "user_name": "Sunny Sun",
    "version": "0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
