--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -2,47 +2,42 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a92e598",
    "metadata": {},
    "source": [
-    "![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna4.ipynb)"
+    "![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)\n",
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna3.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a0da8a5",
    "metadata": {},
    "source": [
-    "# Iteratively train an ML model on a dataset"
+    "# Analyze a dataset in memory"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a33a86e",
    "metadata": {},
    "source": [
-    "In the [previous tutorial](scrna3), we loaded an entire dataset into memory to perform a simple analysis.\n",
+    "Here, we'll analyze the growing dataset by loading it into memory.\n",
     "\n",
-    "Here, we'll iterate over the files within the dataset, to train an ML model."
+    "This is only possible if it's not too large. If you deal with particularly large data, please read the guide on iterating over datta batches (to come)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03d51f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import anndata as ad\n",
-    "import numpy as np"
+    "import lnschema_bionty as lb\n",
+    "import anndata as ad"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626c2cef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,347 +45,174 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fe511a4d",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Setup"
+    "ln.Dataset.filter().df()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f232d65e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()\n",
-    "\n",
-    "dataset_v2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "285a537f",
-   "metadata": {},
-   "source": [
-    "We import [scGen](https://github.com/theislab/scgen), which is built on [scvi-tools](https://github.com/scverse/scvi-tools)."
+    "dataset = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa24cd7",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import scgen"
+    "dataset.files.df()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd564b74",
    "metadata": {},
    "source": [
-    "Similar to what we did in the [previous tutorial](scrna3), we could load the entire dataset into memory and train a model in 4 lines of code.\n",
+    "If the dataset doesn't consist of too many files, we can now load it into memory.\n",
     "\n",
-    ":::{dropdown} How would this look like?\n",
+    "Under-the-hood, the `AnnData` objects are concatenated during loading.\n",
+    "\n",
+    "The amount of time this takes depends on a variety of factors.\n",
+    "\n",
+    "If it occurs often, one might consider storing a concatenated version of the dataset, rather than the individual pieces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = dataset.load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The default is an outer join during concatenation as in pandas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `AnnData` has the reference to the individual files in the `.obs` annotations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.obs.file_id.cat.categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can easily obtain ensemble IDs for gene symbols using the look up object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genes = lb.Gene.lookup(field=\"symbol\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genes.itm2a.ensembl_gene_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us create a plot:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scanpy as sc\n",
+    "\n",
+    "sc.pp.pca(adata, n_comps=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.pl.pca(\n",
+    "    adata,\n",
+    "    color=genes.itm2a.ensembl_gene_id,\n",
+    "    title=(\n",
+    "        f\"{genes.itm2a.symbol} / {genes.itm2a.ensembl_gene_id} /\"\n",
+    "        f\" {genes.itm2a.description}\"\n",
+    "    ),\n",
+    "    save=\"_itm2a\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = ln.File(\"./figures/pca_itm2a.pdf\", description=\"My result on ITM2A\")\n",
+    "file.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook via the command line via:\n",
     "\n",
     "```\n",
-    "data_train = dataset.load(join=\"inner\")\n",
-    "scgen.SCGEN.setup_anndata(data_train)\n",
-    "vae = scgen.SCGEN(data_train)\n",
-    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI\n",
-    "```\n",
-    "\n",
-    ":::"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0a61ac1",
-   "metadata": {},
-   "source": [
-    "Let us instead load all file records:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "addaa4cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1, file2 = dataset_v2.files.list()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "500dd0d2",
-   "metadata": {},
-   "source": [
-    "We'd like some context on what the first file contains and where it's from:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02fb951e",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file1.describe()\n",
-    "file1.view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b2e2b3a",
-   "metadata": {},
-   "source": [
-    "We'll need to make a decision on the features that we want to use for training the model.\n",
-    "\n",
-    "Because each file is validated, they're all indexed by `ensembl_gene_id` in the `var` slot of AnnData."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1bd6fc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shared_genes = file1.features[\"var\"] & file2.features[\"var\"]\n",
-    "shared_genes_ensembl = shared_genes.list(\"ensembl_gene_id\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07ba43a7",
-   "metadata": {},
-   "source": [
-    "## Train the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3634185",
-   "metadata": {},
-   "source": [
-    "Let us load the first file into memory:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecdfac83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train1 = file1.load()[:, shared_genes_ensembl].copy()\n",
-    "data_train1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1bfef8a2",
-   "metadata": {},
-   "source": [
-    "Train the model on this first file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ec5a6cf",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "scgen.SCGEN.setup_anndata(data_train1)\n",
-    "vae = scgen.SCGEN(data_train1)\n",
-    "vae.train(max_epochs=1)  # we use max_epochs=1 to run it on CI\n",
-    "vae.save(\"saved_models/scgen1\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d42318ec",
-   "metadata": {},
-   "source": [
-    "Load the second file and resume training the model:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aba80e62",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "data_train2 = file2.load()[:, shared_genes_ensembl].copy()\n",
-    "vae = scgen.SCGEN.load(\"saved_models/scgen1\", data_train2)\n",
-    "vae.train(max_epochs=1)\n",
-    "vae.save(\"saved_models/scgen1\", overwrite=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "43770f7a",
-   "metadata": {},
-   "source": [
-    "## Save the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccfdc59a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weights = ln.File(\"saved_models/scgen1/model.pt\", description=\"My trained model\")\n",
-    "weights.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "296c67a4",
-   "metadata": {},
-   "source": [
-    "## Save latent representation as a new dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f482b26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "latent1 = vae.get_latent_representation(data_train1)\n",
-    "latent2 = vae.get_latent_representation(data_train2)\n",
-    "\n",
-    "adata_latent1 = ad.AnnData(X=latent1, obs=data_train1.obs)\n",
-    "adata_latent2 = ad.AnnData(X=latent2, obs=data_train2.obs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e7da5328",
-   "metadata": {},
-   "source": [
-    "Because the latent representation is low-dimensional, we can typically fit very high number of observations into memory.\n",
-    "\n",
-    "Hence, let's store it as a concatenated adata."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54f55922",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_latent = ad.concat([adata_latent1, adata_latent2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01fd5a49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2_latent = ln.Dataset(\n",
-    "    adata_latent,\n",
-    "    name=\"Latent representation of scRNA-seq dataset v2\",\n",
-    "    description=\"For the original data, see dataset T5x0SkRJNviE0jYGbJKt\",\n",
-    ")\n",
-    "dataset_v2_latent.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5794f1cc",
-   "metadata": {},
-   "source": [
-    "Let us look at the data flow:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0364f1ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2_latent.view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8688bf0d",
-   "metadata": {},
-   "source": [
-    "Compare this with the model:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e01f713",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weights.view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e814c919",
-   "metadata": {},
-   "source": [
-    "Annotate with labels:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9414d24f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2_latent.labels.add_from(dataset_v2)\n",
-    "\n",
-    "dataset_v2_latent.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74753e31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force test-scrna\n",
-    "!rm -r ./test-scrna"
+    "lamin save <notebook_path>\n",
+    "```"
    ]
   }
  ],
@@ -410,13 +232,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.16"
   },
   "nbproject": {
-   "id": "Qr1kIHvK506r",
+   "id": "mfWKm8OtAzp8",
    "parent": null,
    "pypackage": null,
-   "time_init": "2023-10-01T13:49:05.628463+00:00",
+   "time_init": "2023-09-29T12:59:55.490264+00:00",
    "user_handle": null,
    "user_id": null,
    "user_name": null,
@@ -424,5 +246,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
