🍱 Saved scrna notebooks to lamindata

--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna3.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna3.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=mfWKm8OtAzp8z8)"
    ]
   },
   {
@@ -147,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes.itm2a.ensembl_gene_id"
+    "genes.itm2b.ensembl_gene_id"
    ]
   },
   {
@@ -176,12 +177,12 @@
    "source": [
     "sc.pl.pca(\n",
     "    adata,\n",
-    "    color=genes.itm2a.ensembl_gene_id,\n",
+    "    color=genes.itm2b.ensembl_gene_id,\n",
     "    title=(\n",
-    "        f\"{genes.itm2a.symbol} / {genes.itm2a.ensembl_gene_id} /\"\n",
-    "        f\" {genes.itm2a.description}\"\n",
+    "        f\"{genes.itm2b.symbol} / {genes.itm2b.ensembl_gene_id} /\"\n",
+    "        f\" {genes.itm2b.description}\"\n",
     "    ),\n",
-    "    save=\"_itm2a\",\n",
+    "    save=\"_itm2b\",\n",
     ")"
    ]
   },
@@ -191,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_itm2a.pdf\", description=\"My result on ITM2A\")\n",
+    "file = ln.File(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
     "file.save()"
    ]
   },
