--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna2.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna2.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=ManDYgmftZ8Cz8)"
    ]
   },
   {
