--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna4.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna4.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=Qr1kIHvK506rz8)"
    ]
   },
   {
