--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "We only want to register data with validated genes: data related to other features wouldn't be useful to us, anyway.\n",
     "\n",
-    "Hence, we submet the `AnnData` object to the validated genes:"
+    "Hence, we subset the `AnnData` object to the validated genes:"
    ]
   },
   {
@@ -168,6 +168,22 @@
    "source": [
     "validated = lb.Gene.validate(adata.var.index, lb.Gene.symbol)\n",
     "adata_validated = adata[:, validated].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also subset raw of the anndata object to the validated genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_validated.raw = adata.raw[:, validated].to_adata()"
    ]
   },
   {
@@ -196,6 +212,22 @@
    "outputs": [],
    "source": [
     "adata_validated.var.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Raw has the same genes, so set them also."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_validated.raw.var.index = adata_validated.var.index"
    ]
   },
   {
@@ -467,11 +499,18 @@
    "source": [
     "dataset_v2.view_flow()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.4"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
