--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -75,7 +75,7 @@
    "id": "285a537f",
    "metadata": {},
    "source": [
-    "We import [scGen](https://github.com/theislab/scgen), which is built on [scvi-tools](https://github.com/scverse/scvi-tools)."
+    "We import [scvi-tools](https://github.com/scverse/scvi-tools)."
    ]
   },
   {
@@ -89,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "import scgen"
+    "import scvi"
    ]
   },
   {
@@ -102,9 +102,9 @@
     ":::{dropdown} How would this look like?\n",
     "\n",
     "```\n",
-    "data_train = dataset.load(join=\"inner\")\n",
-    "scgen.SCGEN.setup_anndata(data_train)\n",
-    "vae = scgen.SCGEN(data_train)\n",
+    "data_train = dataset_v2.load(join=\"inner\")\n",
+    "scvi.model.SCVI.setup_anndata(data_train)\n",
+    "vae = scvi.model.SCVI(data_train)\n",
     "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI\n",
     "```\n",
     "\n",
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train1 = file1.load()[:, shared_genes_ensembl].copy()\n",
+    "data_train1 = file1.load().raw[:, shared_genes_ensembl].to_adata()\n",
     "data_train1"
    ]
   },
@@ -219,10 +219,10 @@
    },
    "outputs": [],
    "source": [
-    "scgen.SCGEN.setup_anndata(data_train1)\n",
-    "vae = scgen.SCGEN(data_train1)\n",
+    "scvi.model.SCVI.setup_anndata(data_train1)\n",
+    "vae = scvi.model.SCVI(data_train1)\n",
     "vae.train(max_epochs=1)  # we use max_epochs=1 to run it on CI\n",
-    "vae.save(\"saved_models/scgen1\")"
+    "vae.save(\"saved_models/scvi1\")"
    ]
   },
   {
@@ -244,10 +244,10 @@
    },
    "outputs": [],
    "source": [
-    "data_train2 = file2.load()[:, shared_genes_ensembl].copy()\n",
-    "vae = scgen.SCGEN.load(\"saved_models/scgen1\", data_train2)\n",
+    "data_train2 = file2.load().raw[:, shared_genes_ensembl].to_adata()\n",
+    "vae = scvi.model.SCVI.load(\"saved_models/scvi1\", data_train2)\n",
     "vae.train(max_epochs=1)\n",
-    "vae.save(\"saved_models/scgen1\", overwrite=True)"
+    "vae.save(\"saved_models/scvi1\", overwrite=True)"
    ]
   },
   {
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights = ln.File(\"saved_models/scgen1/model.pt\", description=\"My trained model\")\n",
+    "weights = ln.File(\"saved_models/scvi1/model.pt\", description=\"My trained model\")\n",
     "weights.save()"
    ]
   },
@@ -397,7 +397,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -411,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.4"
   },
   "nbproject": {
    "id": "Qr1kIHvK506r",
