--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -331,7 +331,7 @@
    "outputs": [],
    "source": [
     "feature = ln.Feature(name=\"donor\", type=\"category\", registries=[ln.ULabel])\n",
-    "ln.save(feature)"
+    "feature.save()"
    ]
   },
   {
