--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.filter(id=\"Nv48yAceNSh8z8\").one()"
+    "transform = ln.Transform.filter(uid=\"Nv48yAceNSh8z8\").one()"
    ]
   },
   {
