--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna3.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=mfWKm8OtAzp8z8)"
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=mfWKm8OtAzp8z8)"
    ]
   },
   {
