--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=Nv48yAceNSh8z8)\n",
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=Nv48yAceNSh8z8)\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/laminlabs/lamin-usecases/main?labpath=lamin-usecases%2Fdocs%2Fscrna.ipynb)"
    ]
   },
@@ -331,7 +331,7 @@
    "outputs": [],
    "source": [
     "feature = ln.Feature(name=\"donor\", type=\"category\", registries=[ln.ULabel])\n",
-    "ln.save(feature)"
+    "feature.save()"
    ]
   },
   {
