--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.settings.species = \"human\""
+    "lb.settings.organism = \"human\""
    ]
   },
   {
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are about 36k genes in the registry, all for species \"human\"."
+    "There are about 36k genes in the registry, all for organism \"human\"."
    ]
   },
   {
@@ -464,7 +464,7 @@
    "source": [
     "modalities = ln.Modality.lookup()\n",
     "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()\n",
+    "organism = lb.Organism.lookup()\n",
     "features = ln.Feature.lookup()"
    ]
   },
@@ -546,7 +546,7 @@
    },
    "outputs": [],
    "source": [
-    "file.labels.add(species.human, feature=features.species)\n",
+    "file.labels.add(organism.human, feature=features.organism)\n",
     "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
    ]
   },
@@ -662,7 +662,7 @@
    "outputs": [],
    "source": [
     "dataset.labels.add(experimental_factors.single_cell_rna_sequencing, features.assay)\n",
-    "dataset.labels.add(species.human, features.species)\n",
+    "dataset.labels.add(organism.human, features.organism)\n",
     "dataset.labels.add(adata.obs.cell_type, feature=features.cell_type)\n",
     "dataset.labels.add(adata.obs.assay, feature=features.assay)\n",
     "dataset.labels.add(adata.obs.tissue, feature=features.tissue)\n",
