--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.settings.species = \"human\""
+    "lb.settings.organism = \"human\""
    ]
   },
   {
@@ -347,7 +347,7 @@
    "source": [
     "modalities = ln.Modality.lookup()\n",
     "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()\n",
+    "organism = lb.Organism.lookup()\n",
     "features = ln.Feature.lookup()"
    ]
   },
@@ -388,7 +388,7 @@
    "outputs": [],
    "source": [
     "file.labels.add(adata_validated.obs.cell_type, features.cell_type)\n",
-    "file.labels.add(species.human, feature=features.species)\n",
+    "file.labels.add(organism.human, feature=features.organism)\n",
     "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
    ]
   },
