--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "assays = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()\n",
+    "organism = lb.Organism.lookup()\n",
     "cell_types = lb.CellType.lookup()"
    ]
   },
@@ -121,7 +121,7 @@
    "source": [
     "query = ln.File.filter(\n",
     "    experimental_factors=assays.single_cell_rna_sequencing,\n",
-    "    species=species.human,\n",
+    "    organism=organism.human,\n",
     "    cell_types=cell_types.gamma_delta_t_cell,\n",
     ")"
    ]
