--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -418,19 +418,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import lamindb as ln"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query the previous dataset and the file we just created:"
+    "Query the previous dataset:"
    ]
   },
   {
@@ -439,16 +430,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v1 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"1\").one()\n",
-    "\n",
-    "new_file = ln.File.filter().order_by(\"-created_at\").first()"
+    "dataset_v1 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"1\").one()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new version of the dataset by sharding it across the new file and the file in the previous version of the dataset:"
+    "Create a new version of the dataset by sharding it across the new file `file` and the file underlying version 1 of the dataset:"
    ]
   },
   {
@@ -458,13 +447,13 @@
    "outputs": [],
    "source": [
     "dataset_v2 = ln.Dataset(\n",
-    "    [new_file, dataset_v1.file],\n",
+    "    [file, dataset_v1.file],\n",
     "    is_new_version_of=dataset_v1,\n",
     ")\n",
     "dataset_v2.save()\n",
     "\n",
     "# annotate the dataset\n",
-    "dataset_v2.labels.add_from(new_file)\n",
+    "dataset_v2.labels.add_from(file)\n",
     "dataset_v2.labels.add_from(dataset_v1)"
    ]
   },
@@ -499,13 +488,6 @@
    "source": [
     "dataset_v2.view_flow()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
