--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -23,14 +23,14 @@
    "source": [
     "You'll learn how to manage a growing number of scRNA-seq data batches as a single queryable dataset.\n",
     "\n",
-    "Along the way, you'll see how to create reports, leverage data lineage, and query statistics of individual data batches stored as files.\n",
+    "Along the way, you'll see how to create reports, leverage data lineage, and query individual data batches stored as files.\n",
     "\n",
     "Specifically, you will:\n",
     "\n",
-    "1. read a single `.h5ad` file as an `AnnData` and seed a growing dataset with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), currently page)\n",
+    "1. read a single `.h5ad` file as an `AnnData` object and seed a growing dataset with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
     "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
     "3. query & inspect files by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
-    "4. load the dataset into memory and save analytical results as plots ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
+    "4. load the dataset into memory and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
     "5. iterate over the dataset, train a model, store a derived representation ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))\n",
     "6. discuss converting a number of files to a single TileDB SOMA store of the same data ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna6))\n",
     "\n",
@@ -166,14 +166,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981)"
+    "## Validate ![](https://img.shields.io/badge/Validate-10b981)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Validate genes in `.var`"
+    "### Validate genes in `.var`"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Validate metadata in `.obs`"
+    "### Validate metadata in `.obs`"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
+    "## Register ![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Register data"
+    "### Register data"
    ]
   },
   {
@@ -526,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Register metadata links"
+    "### Register metadata links"
    ]
   },
   {
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a dataset from the file"
+    "## Create a dataset"
    ]
   },
   {
